# hexer

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  treefmt.nix
.github/workflows/: rust.yml
src/: file_picker.rs  main.rs  viewer.rs
src/utils/: mod.rs
src/viewer/: common_dt.rs  file_viewer.rs  mod.rs
