[package]
name = "hexer"
version = "0.1.0"
description = "View binary files' contents in different modes"
authors = ["Vivekanandan Muthaiyan <vivekmuthu1910@gmail.com>"]
license = "MIT"
edition = "2024"
readme = "README.md"
repository = "https://github.com/vivekmuthu1910/hexer"
homepage = "https://github.com/vivekmuthu1910/hexer"
keywords = ["binary-viewer", "tui"]

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
bytemuck = "1.23.1"
num-traits = "0.2.19"
